--- a/templates/score.html
+++ b/templates/score.html
@@ -10,7 +10,7 @@
     <style>
         body {
            
-            background-image: url("{{ url_for('static', filename='css/images/sky.jpg') }}");
+            background-image: url("{{ url_for('static', filename='css/images/bg4.jpg') }}");
             color: #a98ab6; 
             display: flex; 
             align-items: center; 
