--- a/templates/topic.html
+++ b/templates/topic.html
@@ -48,7 +48,7 @@
 <body>
     <nav class="navbar navbar-expand-lg navbar-custom">
         <!-- Brand link to dashboard -->
-        <a class="navbar-brand" href="{{url_for('dashboard')}}">Quiz-ter</a>
+        <a class="navbar-brand" href="{{url_for('select_topic')}}">Quiz-ter</a>
         
         <!-- Logout link -->
         <a href="{{url_for('logout')}}">Logout</a>
